--- a/Cereales.html
+++ b/Cereales.html
@@ -161,8 +161,8 @@
     <div class="header">Información sobre Cereales</div>
     <div class="menu">
         <a href="index.html">Inicio</a>
-        <a href="frutales.html">Frutales</a>
-        <a href="hortalizas.html">Hortalizas</a>
+        <a href="Frutales.html">Frutales</a>
+        <a href="Hortalizas.html">Hortalizas</a>
         <a href="leguminosas.html">Leguminosas</a>
         <a href="contacto.html">Contacto</a>
     </div>
