--- a/Hortalizas.html
+++ b/Hortalizas.html
@@ -161,8 +161,8 @@
     <div class="header">Información sobre Hortalizas</div>
     <div class="menu">
         <a href="index.html">Inicio</a>
-        <a href="frutales.html">Frutales</a>
-        <a href="cereales.html">Cereales</a>
+        <a href="Frutales.html">Frutales</a>
+        <a href="Cereales.html">Cereales</a>
         <a href="contacto.html">Contacto</a>
     </div>
 
