--- a/Hortalizas.html
+++ b/Hortalizas.html
@@ -208,7 +208,7 @@
         <!-- Video Insertado -->
         <div class="video-container">
             <video controls>
-                <source src="videoHortalizas.mp4" type="video/mp4">
+                <source src="videoHortlizas.mp4" type="video/mp4">
                 Tu navegador no soporta el formato de video.
             </video>
        
