--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script>
         function irAPagina(tipo) {
             var paginas = {
-                "Hortalizas": "hortalizas.html",
-                "Frutales": "frutales.html",
-                "Cereales": "cereales.html",
+                "Hortalizas": "Hortalizas.html",
+                "Frutales": "Frutales.html",
+                "Cereales": "Cereales.html",
                 "Leguminosas": "leguminosas.html",
-                "Flores": "flores.html",
+                "Flores": "Flores.html",
                 "Tractores": "tractores.html",
                 "Tractor Compacto": "Tractor_Compacto.html",
                 "Tractor Oruga": "Tractor_Oruga.html",
