--- a/Frutales.html
+++ b/Frutales.html
@@ -161,8 +161,8 @@
     <div class="header">Información sobre Frutales</div>
     <div class="menu">
         <a href="index.html">Inicio</a>
-        <a href="hortalizas.html">Hortalizas</a>
-        <a href="cereales.html">Cereales</a>
+        <a href="Hortalizas.html">Hortalizas</a>
+        <a href="Cereales.html">Cereales</a>
         <a href="contacto.html">Contacto</a>
     </div>
 
