--- a/Tractor_Industrial.html
+++ b/Tractor_Industrial.html
@@ -156,6 +156,11 @@
             <img src="tractor industrial.jpg" alt="Tractor Industrial en acción" title="Tractor Industrial">
         </div>
 
+        <h2>Tractor en acción</h2>
+        <div class="image-container">
+            <img src="giftractor.gif" alt="GIF de Tractor en acción" title="Tractor en movimiento">
+        </div>
+
         <h2>Características del Tractor Industrial</h2>
         <table>
             <caption>Características principales del tractor industrial</caption>
@@ -181,7 +186,6 @@
             </tr>
         </table>
 
-  
     </div>
 
     <footer>
