--- a/caracteristicasc.html
+++ b/caracteristicasc.html
@@ -167,14 +167,12 @@
             </table>
         </div>
 
-        <!-- Sección de video -->
-        <div class="video-container">
-            <h2>Video Tractor Compacto</h2>
-            <video controls>
-                <source src="videocompacto.mp4" type="video/mp4">
-                Tu navegador no soporta el formato de video.
-            </video>
-        </div>
+          <!-- Sección de Videos -->
+        <div class="videos">
+            <iframe width="560" height="315" src="https://youtu.be/58BDIxhCVJs?si=H5hYfRbNKue0B4gD" title="Tractor Compacto"
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
 
         <!-- Botón para volver a la página principal -->
         <div class="button-container">
