--- a/caracteristicasi.html
+++ b/caracteristicasi.html
@@ -168,13 +168,13 @@
         </div>
 
         <!-- Sección de video -->
-        <div class="video-container">
-            <h2>Video Tractor Industrial</h2>
-            <video controls>
-                <source src="videoindustrial.mp4" type="video/mp4">
-                Tu navegador no soporta el formato de video.
-            </video>
-        </div>
+         
+        <section class="video-container">
+            <iframe width="560" height="315" src="https://youtu.be/NgpFphnsn10?si=wMmSDYK17FDhmfcr" 
+                title="Tractor Industrial" frameborder="0" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
+        </section>
 
         <!-- Botón para volver a la página principal -->
         <div class="button-container">
