--- a/caracteristicasc.html
+++ b/caracteristicasc.html
@@ -151,6 +151,14 @@
                 </tr>
             </table>
         </section>
+              <!-- Sección de video -->
+         
+        <section class="video-container">
+            <iframe width="560" height="315" src="https://youtu.be/nMxml7yMRzo?si=Z-2E9nEYeisM-Cz-" 
+                title="Tractor Compacto" frameborder="0" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
+        </section>
         <!-- Botón para volver a la página principal -->
         <div class="button-container">
             <a href="index.html">Volver a la página principal</a>
