--- a/caracteristicaso.html
+++ b/caracteristicaso.html
@@ -168,14 +168,13 @@
             </table>
         </div>
 
-        <!-- Sección de video -->
-        <div class="video-container">
-            <h2>Video Tractor Oruga</h2>
-            <video controls>
-                <source src="videooruga.mp4" type="video/mp4">
-                Tu navegador no soporta el formato de video.
-            </video>
-        </div>
+            <!-- Sección de video -->
+         
+        <section class="video-container">
+            <iframe width="560" height="315" src="https://youtu.be/hkQjiSZbfn4?si=V1CtJcKqeEcuJvla" 
+                title="Tractor Oruga" frameborder="0" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
 
         <!-- Botón para volver a la página principal -->
         <div class="button-container">
