--- a/caracteristicaso.html
+++ b/caracteristicaso.html
@@ -168,13 +168,13 @@
             </table>
         </div>
 
-            <!-- Sección de video -->
-         
+        <!-- Sección de video -->
         <section class="video-container">
-            <iframe width="560" height="315" src="https://youtu.be/hkQjiSZbfn4?si=V1CtJcKqeEcuJvla" 
+            <iframe width="560" height="315" src="https://youtu.be/hkQjiSZbfn4" 
                 title="Tractor Oruga" frameborder="0" 
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
+        </section>
 
         <!-- Botón para volver a la página principal -->
         <div class="button-container">
