--- a/contacto.html
+++ b/contacto.html
@@ -110,7 +110,7 @@
 
     <div class="container">
         <h1>Contáctanos</h1>
-        <p>Si tienes alguna pregunta o deseas más información sobre nuestros tractores, llena el siguiente formulario o visítanos en nuestras sucursales.</p>
+        <p>Si tienes alguna pregunta o deseas más información sobre nuestros tractores, <em>llena</em> el siguiente formulario o visítanos en nuestras sucursales. Si prefieres, puedes <del>enviar un correo electrónico</del> <ins>contactarnos a través del formulario</ins>.</p>
 
         <form>
             <label for="nombre">Nombre:</label>
@@ -137,7 +137,7 @@
         </form>
 
         <h2>Ubicación de Sucursales</h2>
-        <p>Encuentra nuestras sucursales en Aguascalientes (<abbr title="Aguascalientes">Ags</abbr>).</p>
+        <p>Encuentra nuestras sucursales en Aguascalientes (<abbr title="Aguascalientes">Ags</abbr>) y <cite>fuentes confiables</cite> nos indican que estamos creciendo rápidamente.</p>
 
         <div id="map"></div>
 
@@ -171,3 +171,4 @@
     </script>
 </body>
 </html>
+
