--- a/contacto.html
+++ b/contacto.html
@@ -169,6 +169,8 @@
                 .openPopup();
         });
     </script>
+    p>Contacto por correo: <a href="mailto:cesparza1322@ags.conalep.edu.mx">cesparza1322@ags.conalep.edu.mx</a></p>
+
 </body>
 </html>
 
