--- a/contacto.html
+++ b/contacto.html
@@ -138,7 +138,7 @@
 
         <h2>Ubicación de Sucursales</h2>
         <p>Encuentra nuestras sucursales en Aguascalientes (<abbr title="Aguascalientes">Ags</abbr>) y <cite>fuentes confiables</cite> nos indican que estamos creciendo rápidamente.</p>
-
+   <p>Contacto por correo: <a href="mailto:cesparza1322@ags.conalep.edu.mx">cesparza1322@ags.conalep.edu.mx</a></p>
         <div id="map"></div>
 
         <!-- Enlace para regresar al menú principal -->
@@ -169,7 +169,7 @@
                 .openPopup();
         });
     </script>
-    p>Contacto por correo: <a href="mailto:cesparza1322@ags.conalep.edu.mx">cesparza1322@ags.conalep.edu.mx</a></p>
+    <p>Contacto por correo: <a href="mailto:cesparza1322@ags.conalep.edu.mx">cesparza1322@ags.conalep.edu.mx</a></p>
 
 </body>
 </html>
