--- a/caracteristicasc.html
+++ b/caracteristicasc.html
@@ -80,39 +80,6 @@
         td {
             background-color: #f9f9f9;
         }
-
-        /* Estilo del video */
-        .video-container {
-            text-align: center;
-            margin-top: 30px;
-        }
-
-        .video-container iframe {
-            width: 80%;
-            height: 400px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Estilo de botones */
-        .button-container {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .button-container a {
-            text-decoration: none;
-            display: inline-block;
-            padding: 12px 30px;
-            background-color: #006b2c;
-            color: white;
-            border-radius: 8px;
-            font-size: 18px;
-        }
-
-        .button-container a:hover {
-            background-color: #004d1f;
-        }
     </style>
 </head>
 <body>
@@ -125,7 +92,7 @@
         <section class="info-box">
             <h1>Beneficios del Tractor Compacto</h1>
             <p>
-                El tractor compacto es ideal para pequeños terrenos agrícolas. Su diseño compacto lo hace fácil de maniobrar, incluso en espacios reducidos. Es perfecto para quienes buscan eficiencia y versatilidad en terrenos pequeños.
+                El <dfn title="Vehículo motorizado utilizado en la agricultura para diversas tareas">tractor</dfn> compacto es ideal para pequeños terrenos agrícolas. Su diseño compacto lo hace fácil de maniobrar, incluso en espacios reducidos. Es perfecto para quienes buscan eficiencia y versatilidad en terrenos pequeños.
             </p>
         </section>
 
@@ -148,6 +115,10 @@
                 <tr>
                     <td>Eficiencia</td>
                     <td>Consumo eficiente de combustible, adecuado para trabajos agrícolas moderados.</td>
+                </tr>
+                <tr>
+                    <td><abbr title="Revoluciones por minuto">RPM</abbr> del motor</td>
+                    <td>Ofrece una alta eficiencia en potencia y rendimiento.</td>
                 </tr>
             </table>
         </section>
