--- a/caracteristicaso.html
+++ b/caracteristicaso.html
@@ -80,55 +80,6 @@
         td {
             background-color: #f9f9f9;
         }
-
-        /* Estilo del video */
-        .video-container {
-            text-align: center;
-            margin-top: 30px;
-        }
-
-        .video-container iframe, .video-container video {
-            width: 80%;
-            height: 400px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Enlace de regreso */
-        .back-link {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #008f39;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 30px;
-        }
-
-        .back-link:hover {
-            background-color: #006b2c;
-        }
-
-        /* Estilo de botones */
-        .button-container {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .button-container a {
-            text-decoration: none;
-            display: inline-block;
-            padding: 12px 30px;
-            background-color: #006b2c;
-            color: white;
-            border-radius: 8px;
-            font-size: 18px;
-        }
-
-        .button-container a:hover {
-            background-color: #004d1f;
-        }
-
     </style>
 </head>
 <body>
@@ -168,7 +119,18 @@
             </table>
         </div>
 
-      
+        <!-- Especificaciones Técnicas -->
+        <div class="info-box">
+            <h2>Especificaciones Técnicas</h2>
+            <pre>
+                <code>
+Motor: Diesel 6 cilindros
+Potencia: 150 HP a 2200 RPM
+Capacidad del tanque: 120 litros
+Peso: 4500 kg
+                </code>
+            </pre>
+        </div>
 
         <!-- Botón para volver a la página principal -->
         <div class="button-container">
